# order-processing

./: .dockerignore  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_create_orders.py
api/: config.py  db.py  dto.py  log.py  main.py  models.py  queue.py
docker/: app.Dockerfile
logic/: orders.py  worker.py
orders_mini.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_api.py  test_worker.py
worker/: main.py
