[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orders-mini"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "sqlalchemy>=2.0.32",
    "asyncpg>=0.29.0",
    "redis>=5.0.8",
    "alembic>=1.13.2",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.8",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "email-validator>=2.2.0",
]

[tool.setuptools.packages.find]
include = ["api*", "worker*", "logic*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
